2016-12-12  Brady Eidson  <beidson@apple.com>

        More IndexedDB perf tests.
        https://bugs.webkit.org/show_bug.cgi?id=165634

        Reviewed by Sam Weinig.

        * IndexedDB/index-multientry.html:
        * IndexedDB/large-number-of-inserts-responsiveness.html: Added.
        * IndexedDB/large-number-of-inserts.html: Added.
        * IndexedDB/objectstore-cursor.html: Added. Runtime cut in 1/4th compared to r209672.

        * resources/runner.js:

2016-12-12  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r209672.
        https://bugs.webkit.org/show_bug.cgi?id=165766

        IndexedDB/objectstore-cursor.html perf test always times out
        (Requested by ap on #webkit).

        Reverted changeset:

        "More IndexedDB perf tests."
        https://bugs.webkit.org/show_bug.cgi?id=165634
        http://trac.webkit.org/changeset/209672

2016-12-10  Brady Eidson  <beidson@apple.com>

        More IndexedDB perf tests.
        https://bugs.webkit.org/show_bug.cgi?id=165634

        Reviewed by Sam Weinig.

        * IndexedDB/index-multientry.html:
        * IndexedDB/large-number-of-inserts-responsiveness.html: Added.
        * IndexedDB/large-number-of-inserts.html: Added.
        * IndexedDB/objectstore-cursor.html: Added.
        
        * resources/runner.js: Add "track responsiveness" functionality to PerfTestRunner.

2016-12-06  Filip Pizlo  <fpizlo@apple.com>

        Concurrent GC should be stable enough to land enabled
        https://bugs.webkit.org/show_bug.cgi?id=164990

        Reviewed by Geoffrey Garen.
        
        Made CDjs more configurable and refined the "large.js" configuration. I was using that one and
        the new "long.js" configuration to tune concurrent eden GCs.
        
        Added a new way of running Splay in browser, which using chartjs to plot the execution times of
        2000 iterations. This includes the minified chartjs.
